--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,17 @@ header {
 	margin: 5%;
 }
 
+#container {
+	width: 80%;
+	height: 100%;
+	padding-bottom: 10%;
+	padding-top: 5%;
+	margin: 0 auto;
+	background-color: #222747;
+	border-radius: 10px;
+	margin-top: 100px;
+}
+
 .christmas {
 	grid-area: it1;
 	border-radius: 10px;
